--- a/calendar.html
+++ b/calendar.html
@@ -6,7 +6,9 @@
     <title>Accuracy Calendar</title>
   </head>
   <body>
+  	<header class="masthead">
       <iframe src="https://calendar.google.com/calendar/embed?src=o7j7na8lj9tafn5alspuufvq70%40group.calendar.google.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
       <p><button type="button"><a href="requestForm.html" style="text-decoration:none"><font color="#ffffff">Schedule a Meeting</font></a></button></p>
   </body>
+</header>
 </html>
